Fix signup spacing

--- a/client/src/pages/SignUp.css
+++ b/client/src/pages/SignUp.css
@@ -22,7 +22,7 @@
     width: 100%;
     height: 40px;
     border-radius: 10px;
-    margin-bottom: 0px;
+    margin-bottom: 10px;
     border-style: none;
     border: 1.2px solid black;
     margin-top: -15px;
